--- a/pro.html
+++ b/pro.html
@@ -19,8 +19,17 @@
             <li><a href=""><Button class="btn-1">HIre Me</Button></a></li>
         </ul>
         </nav>
+        <div class="header">
+         <div class="content">
+           <h4 class="greetings">Hi, I am</h4>
+           <h1 class="header-title">Mary Hardy</h1>
+           <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+           <button class="btn-1">Download CV</button>
+           <button class="btn-1">Contact</button>
+         </div>
+         <img class="profile-pic" src="images/hardy.png" alt="hardy">
+        </div>  
 
-        
     </header>
 </body>
 </html>
