--- a/pro.html
+++ b/pro.html
@@ -63,6 +63,36 @@
          </div>
         </div>
     </section>
+    <section class="skillss">
+        <h3 class="skilltitle atitle tc">What I Do</h3>
+        <p class="secdes description tc">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+        <div class="skills">
+            <div class="skill">
+                <img src="images/icons/js.png" alt="js">
+                <h4 class="sk-ti">Vanilla JavaScript
+                    </h4>
+                <p class="skdes">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill">
+                <img src="images/icons/react.png" alt="react">
+                <h4 class="sk-ti">React
+                    </h4>
+                <p class="skdes">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill">
+                <img src="images/icons/nodejs.png" alt="nodejs">
+                <h4 class="sk-ti">Node.js
+                    </h4>
+                <p class="skdes">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill">
+                <img src="images/icons/mongo.png" alt="mongodb">
+                <h4 class="sk-ti">MongoDB
+                    </h4>
+                <p class="skdes">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+        </div>
+    </section>
 </main>
 
 </body>
