--- a/pro.html
+++ b/pro.html
@@ -93,6 +93,61 @@
             </div>
         </div>
     </section>
+    <section class="resume">
+        <h3 class="reti tc atitle">A summary of My Resume</h3>
+        <div class="re-con">
+            <div class="re-col">
+                <h3 class="re-ti">My Education</h3>
+                <div class="re-exp">
+                    <h4 class="ex-ti">Master in Computer Engineering</h4>
+                    <h5 class="sub-ti">Harvard University / 2015 - 2017</h5>
+                    <div class="ex-des">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                </div>
+                <hr>
+                <div class="re-exp">
+                    <h4 class="ex-ti">Master in Computer Engineering</h4>
+                    <h5 class="sub-ti">Harvard University / 2015 - 2017</h5>
+                    <div class="ex-des">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                </div>
+                <hr>
+                <div class="re-exp">
+                    <h4 class="ex-ti">Master in Computer Engineering</h4>
+                    <h5 class="sub-ti">Harvard University / 2015 - 2017</h5>
+                    <div class="ex-des">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                </div>
+            </div>
+            <div class="re-col">
+                <h3 class="re-ti">My Experience</h3>
+                <div class="re-exp">
+                    <h4 class="ex-ti">Sr. Font End Developer</h4>
+                    <h5 class="sub-ti">Apple Inc / 2020 - Current</h5>
+                    <div class="ex-des">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                </div>
+                <hr>
+                <div class="re-exp">
+                    <h4 class="ex-ti">Jr. Font End Developer</h4>
+                    <h5 class="sub-ti">Dribbble Inc / 2018 - 2022</h5>
+                    <div class="ex-des">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                </div>
+                <hr>
+                <div class="re-exp">
+                    <h4 class="ex-ti">HTML Developer</h4>
+                    <h5 class="sub-ti">Adobe Inc / 2017 - 2018</h5>
+                    <div class="ex-des">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                </div>
+            </div>
+            
+        </div>
+        <div class="rebut tc">
+            <button class="btn-1"> Download CV</button>
+        </div>
+    </section>
 </main>
 
 </body>
