--- a/pro.html
+++ b/pro.html
@@ -149,6 +149,29 @@
         </div>
     </section>
 </main>
+<footer class="bg-color">
+    <div class="col-2 cnt">
+     <h3 class="col-ti">Lets Connect</h3>
+     <p class="fo-des">
+        Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+     </p>
+     <div class="icon">
+        <a href="https://www.facebook.com/"><img src="images/icons/facebook.png" alt="facebook"></a>
+        <a href="https://twitter.com/"><img src="images/icons/twitter.png" alt="twitter"></a>
+        <a href="https://www.instagram.com/"><img src="images/icons/insta.png" alt="insta"></a>
+     </div>
+    </div>
+    <div class="col-2">
+        <h3 class="col-ti">Let's Message me</h3>
+        <form action="#">
+            <input type="text" placeholder="Your Name">
+            <input type="email" placeholder="Your Email">
+            <textarea placeholder="Message" rows="10"> </textarea>
+            <input type="submit" class="btn-1">
+        </form>
+        </div>
 
+    </div>
+</footer>
 </body>
 </html>
